[build] add uuid package

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-icons": "^3.11.0",
     "react-id-generator": "^3.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
